Apply selected Java best practices refactorings
- Apply the relevant subset of Java best practices recipe transformations.
- Convert eligible filter, map, collect, and search loops to streams.
- Retain imperative loops where streams reduce clarity or change behavior.